--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@
        }
        button{
           font-size:2em;
-          padding:2%; 
+          padding:2px; 
           color:black;
           background-color:white;
           border-radius:5px;
@@ -404,3 +404,24 @@ height: 500px;
     background-color:white;
 height: 500px;
 }
+.switzerland,.eiffel,.venice,.pisa h2{
+    margin: 30px;
+    border:30px;
+    padding:10px;
+    background-color:gray;
+}
+.switzerland,.eiffel,.venice,.pisa h3{
+    width:fit-content;
+    margin:5px;
+    border:8px;
+    padding:2px;
+   
+
+}
+.switzerland,.eiffel,.venice,.pisa p{
+    margin:50px;
+    width: 70%;
+    font-size: medium;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
